--- a/index.html
+++ b/index.html
@@ -2,189 +2,193 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Wallet App</title>
   <style>
+    :root {
+      --bg-dark: #0d1117;
+      --bg-light: #ffffff;
+      --text-dark: #c9d1d9;
+      --text-light: #000000;
+      --primary: #238636;
+    }
+
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background-color: #000;
-      color: #fff;
-      overflow-x: hidden;
+      background-color: var(--bg-dark);
+      color: var(--text-dark);
+      transition: all 0.3s ease;
     }
-    header {
-      background-color: #111;
-      padding: 1rem;
-      text-align: center;
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-    .balance {
-      text-align: center;
-      margin: 1rem;
-      font-size: 2rem;
-    }
-    .buttons {
+
+    .loader {
+      position: fixed;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: var(--bg-dark);
       display: flex;
-      justify-content: space-around;
-      margin: 1rem;
+      align-items: center;
+      justify-content: center;
+      color: var(--primary);
+      font-size: 1.5rem;
+      z-index: 9999;
     }
+
+    .container {
+      padding: 2rem;
+    }
+
+    h1 {
+      margin-bottom: 0.5rem;
+    }
+
+    .balance {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+    }
+
     button {
-      padding: 0.7rem 1.2rem;
+      margin: 5px;
+      padding: 10px 20px;
+      background-color: var(--primary);
+      color: #fff;
       border: none;
-      background-color: #333;
-      color: white;
       border-radius: 5px;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #555;
-    }
-    .wallet-info {
-      text-align: center;
-      font-size: 0.9rem;
-      margin-bottom: 1rem;
-    }
-    .transactions {
-      padding: 1rem;
-    }
+
     .transaction {
       border-bottom: 1px solid #444;
       padding: 0.5rem 0;
     }
-    .popup {
-      position: fixed;
-      top: 40%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      background-color: #222;
-      color: #fff;
-      padding: 1rem;
-      border-radius: 8px;
-      text-align: center;
-      display: none;
-      z-index: 999;
-    }
-    .popup button {
-      margin-top: 1rem;
-    }
-    #support {
-      text-align: center;
-      padding: 1rem;
-      background-color: #111;
-    }
-    .loader {
-      position: fixed;
-      top: 0; left: 0; right: 0; bottom: 0;
-      background: #000;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-    }
-    .loader div {
-      width: 40px;
-      height: 40px;
-      border: 5px solid #ccc;
-      border-top: 5px solid #1db954;
-      border-radius: 50%;
-      animation: spin 1s linear infinite;
-    }
-    @keyframes spin {
-      100% { transform: rotate(360deg); }
+
+    .toggle-btns {
+      margin: 1rem 0;
     }
 
-    .toggle-mode {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      background: #222;
-      color: #fff;
-      padding: 5px 10px;
-      border-radius: 5px;
-      cursor: pointer;
-      font-size: 0.9rem;
+    .chart, .chatbot, .support {
+      margin-top: 2rem;
     }
+
+    .light-mode {
+      background-color: var(--bg-light);
+      color: var(--text-light);
+    }
+
+    .hidden {
+      display: none;
+    }
+
+    .footer {
+      margin-top: 3rem;
+      font-size: 0.9rem;
+      color: gray;
+      text-align: center;
+    }
+
+    .bot-box {
+      border: 1px solid #444;
+      padding: 1rem;
+      border-radius: 10px;
+    }
+
   </style>
 </head>
 <body>
 
-<div class="loader"><div></div></div>
+  <div class="loader" id="loader">Loading Wallet App...</div>
 
-<div class="toggle-mode" onclick="toggleMode()">Switch Mode</div>
+  <div class="container hidden" id="main">
+    <h1>Wallet App</h1>
+    <p class="balance">Balance: <strong>$6,685.68</strong></p>
 
-<header>Wallet App</header>
+    <div>
+      <button onclick="showUnlock()">Send</button>
+      <button onclick="showUnlock()">Receive</button>
+      <button onclick="showUnlock()">Scan</button>
+    </div>
 
-<div class="balance">$6,685.68</div>
+    <div class="toggle-btns">
+      <button onclick="toggleTheme()">Toggle Light/Dark</button>
+      <button onclick="toggleLanguage()">Switch to French</button>
+    </div>
 
-<div class="buttons">
-  <button onclick="showPopup()">Send</button>
-  <button onclick="showPopup()">Receive</button>
-  <button onclick="showPopup()">Scan</button>
-</div>
+    <h3>Transaction History</h3>
+    <div id="transactions"></div>
 
-<div class="wallet-info">
-  Wallet: 0xfAbC09ba76d0004339179aa6bDFF7d0d3C9820Ff<br>
-  Network: Crypto One Chain<br>
-  Token: POL
-</div>
+    <div class="chart">
+      <h3>Balance Chart</h3>
+      <p>[📊 Chart feature coming soon]</p>
+    </div>
 
-<div class="transactions" id="transactions"></div>
+    <div class="chatbot">
+      <h3>💬 Chat Assistant</h3>
+      <div class="bot-box">
+        <p><strong>Bot:</strong> Hello! Need help? Type a question below.</p>
+        <input type="text" placeholder="Type here..." style="width: 100%; padding: 10px; margin-top: 5px;">
+      </div>
+    </div>
 
-<div class="popup" id="popup">
-  <p>🔒 This feature is locked.</p>
-  <p>Pay <strong>$7</strong> to unlock.</p>
-  <button onclick="hidePopup()">Close</button>
-</div>
+    <div class="support">
+      <h3>🔗 Support</h3>
+      <a href="https://t.me/jhayone_tech5" target="_blank">📩 Contact on Telegram</a>
+    </div>
 
-<div id="support">
-  Need help? Contact: <a href="https://t.me/jhayone_tech5" target="_blank" style="color:#1db954;">@jhayone_tech5</a>
-</div>
+    <div class="footer">
+      &copy; 2025 Wallet App • Developed by Jhayone Tech
+    </div>
+  </div>
 
-<script>
-  // Loading animation
-  window.addEventListener("load", () => {
-    document.querySelector(".loader").style.display = "none";
-  });
+  <script>
+    const transactions = [
+      { date: 'Jul 6, 2025', amount: '+$6,685.00', status: '✅ Confirmed' },
+      { date: 'Jul 7, 2025', amount: '-$1,354.00', status: '✅ Confirmed' },
+    ];
 
-  // Popup
-  function showPopup() {
-    document.getElementById("popup").style.display = "block";
-  }
+    for (let i = 0; i < 98; i++) {
+      const date = `Jul ${Math.floor(Math.random() * 9) + 1}, 2025`;
+      const sign = Math.random() > 0.5 ? '+' : '-';
+      const amount = `$${(Math.random() * (4000 - 1000) + 1000).toFixed(2)}`;
+      transactions.push({ date, amount: `${sign}${amount}`, status: '✅ Confirmed' });
+    }
 
-  function hidePopup() {
-    document.getElementById("popup").style.display = "none";
-  }
+    window.onload = function () {
+      setTimeout(() => {
+        document.getElementById("loader").style.display = "none";
+        document.getElementById("main").classList.remove("hidden");
 
-  // Transactions
-  const container = document.getElementById("transactions");
-  const staticTop = `
-    <div class="transaction">Transfer From<br>Jul 6, 2025<br>+ $6,685.00 ✅ Confirmed</div>
-    <div class="transaction">Transfer From<br>Jul 7, 2025<br>- $1,354.00 ✅ Confirmed</div>
-  `;
+        const container = document.getElementById("transactions");
+        transactions.reverse().forEach(tx => {
+          const div = document.createElement("div");
+          div.className = "transaction";
+          div.innerText = `Transfer From\n${tx.date}\n${tx.amount} ${tx.status}`;
+          container.appendChild(div);
+        });
+      }, 2000);
+    };
 
-  let tx = '';
-  const today = new Date();
-  for (let i = 0; i < 100; i++) {
-    let date = new Date(today.getTime() - i * 86400000);
-    const label = date.toLocaleDateString('en-US', { month: 'short', day: 'numeric', year: 'numeric' });
-    const amount = (Math.random() * (4000 - 1000) + 1000).toFixed(2);
-    const sign = Math.random() > 0.5 ? '+' : '-';
-    tx += `<div class="transaction">Transfer From<br>${label}<br>${sign} $${amount} ✅ Confirmed</div>`;
-  }
+    function showUnlock() {
+      alert("🔒 This feature is locked. Please pay $7 to unlock.");
+    }
 
-  container.innerHTML = staticTop + tx;
+    function toggleTheme() {
+      document.body.classList.toggle("light-mode");
+    }
 
-  // Toggle Light/Dark
-  let darkMode = true;
-  function toggleMode() {
-    darkMode = !darkMode;
-    document.body.style.backgroundColor = darkMode ? "#000" : "#fff";
-    document.body.style.color = darkMode ? "#fff" : "#000";
-    document.querySelectorAll(".transaction").forEach(tx => tx.style.borderBottom = darkMode ? "1px solid #444" : "1px solid #ccc");
-    document.querySelector(".toggle-mode").innerText = darkMode ? "Switch to Light Mode" : "Switch to Dark Mode";
-  }
-</script>
-
+    let currentLang = 'en';
+    function toggleLanguage() {
+      if (currentLang === 'en') {
+        document.querySelector("h1").innerText = "Portefeuille";
+        document.querySelector(".balance").innerHTML = "Solde: <strong>$6,685.68</strong>";
+        document.querySelector("h3").innerText = "Historique des transactions";
+        document.querySelector(".chart h3").innerText = "Graphique du solde";
+        document.querySelector(".chatbot h3").innerText = "💬 Assistant";
+        document.querySelector(".support h3").innerText = "🔗 Support";
+        currentLang = 'fr';
+      } else {
+        location.reload(); // Reloads to reset back to English
+      }
+    }
+  </script>
 </body>
 </html>
